今晚真刺激

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebRoot/jumpHome.jsp=UTF-8
+encoding//WebRoot/mainframe.jsp=UTF-8
+encoding//WebRoot/worldtemp.jsp=UTF-8
