--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   <welcome-file-list>
-    <welcome-file>login.jsp</welcome-file>
+    <welcome-file>judge.jsp</welcome-file>
   </welcome-file-list>
   <filter>
     <filter-name>struts2</filter-name>
